0.0.5 ()
  - Added toolbar button
  - Enter or double click on photo in set now opens photo in flickr
0.0.4 (November 13th, 2006)
  - Added button to remove linebreaks from generated HTML
  - Added the word 'sidebar' to the extension name so that you don't have to look hard for it
  - UI polishing, including making it more boring
  - code cosmetics
0.0.3 (November 6th, 2006)
  - Firefox 2.0 compatibility
0.0.2 (October 17th, 2006)
  - Added brief help file
  - Fixed HTML generation code
  - Fixed a mistyped flickr url so that the 'Flickr' button works now
0.0.1 (October 3rd, 2006)
  - Added ability to paginate through search results
  - Fixed packaging bug that omitted packaging license dialog
  - A lot of code cleanup and UI polishing
0.0 (September 26th, 2006)
  - Initial release